# opencv-3

doc/: Mastering OpenCV 스터디 내용 요약.docx
src/MasteringOpenCV/Chapter 1/: README.txt
src/MasteringOpenCV/Chapter 4/: CMakeLists.txt  Common.cpp  Common.h  Distance.cpp  Distance.h  FindCameraMatrices.cpp  FindCameraMatrices.h  IDistance.h  MultiCameraDistance.cpp  MultiCameraDistance.h  MultiCameraPnP.cpp  MultiCameraPnP.h  README  RichFeatureMatcher.cpp  RichFeatureMatcher.h  Triangulation.cpp  Triangulation.h  Visualization.cpp  Visualization.h  main.cpp
src/MasteringOpenCV/Chapter 4/__MACOSX/: ._BundleAdjuster.cpp  ._BundleAdjuster.h  ._CMakeLists.txt  ._Common.cpp  ._Common.h  ._Distance.cpp  ._Distance.h  ._FindCameraMatrices.cpp  ._FindCameraMatrices.h  ._IDistance.h  ._IFeatureMatcher.h  ._MultiCameraDistance.cpp  ._MultiCameraDistance.h  ._MultiCameraPnP.cpp  ._MultiCameraPnP.h  ._OFFeatureMatcher.cpp  ._OFFeatureMatcher.h  ._RichFeatureMatcher.cpp  ._RichFeatureMatcher.h  ._Triangulation.cpp  ._Triangulation.h  ._Visualization.cpp  ._Visualization.h  ._main.cpp
src/MasteringOpenCV/Chapter 5/: FluidSolver.cpp  FluidSolver.h  FluidSolverMultiUser.cpp  FluidSolverMultiUser.h  KinectController.cpp  KinectController.h  README.txt  fluidWall.cpp  fluidWall_2.cpp
src/MasteringOpenCV/Chapter 6/: DetectRegions.cpp  DetectRegions.h  OCR.cpp  OCR.h  Plate.cpp  Plate.h  README  evalOCR.cpp  main.cpp  trainOCR.cpp  trainSVM.cpp
src/MasteringOpenCV/Chapter 7/: README.txt
src/MasteringOpenCV/Chapter 8/: main.cpp
src/MasteringOpenCV/Chapter 9/: ImageUtils.h  Makefile  (+10 more)
(+196 files in other folders)
